--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@aldabil/react-scheduler": "^2.7.11",
+    "@daypilot/daypilot-lite-react": "^3.15.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
@@ -49,6 +50,7 @@
     "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2023.2.5582.tar.gz",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
